# 3D-segmentation

./: README.md
Mask-RCNN/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  detected.txt  imageBasics.cbp  mask_rcnn  mask_rcnn.cpp
joinMap/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  joinMap  joinMap.cpp
